[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/Enemie/EnemyMK1.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/Gunner/Light/Gunner1/gunner1_3.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/Gunner/Light/Gunner1/gunner1_4.png" type="Texture" id=3]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow1.png" type="Texture" id=4]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow2.png" type="Texture" id=5]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow3.png" type="Texture" id=6]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow4.png" type="Texture" id=7]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow5.png" type="Texture" id=8]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow6.png" type="Texture" id=9]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow7.png" type="Texture" id=10]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow8.png" type="Texture" id=11]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow9.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemies/Gunner/Light/Gunner1/gunner1_1.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemies/Gunner/Light/Gunner1/gunner1_2.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemies/HUD/Life1.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies/HUD/Life2.png" type="Texture" id=16]
[ext_resource path="res://assets/Sound/Ouch.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/Sound/Am_Enemy.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/Sound/Boom.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ null, ExtResource( 2 ), null, ExtResource( 2 ), null, ExtResource( 2 ) ],
"loop": true,
"name": "hitted",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "death",
"speed": 30.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "running",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 86.3914

[node name="EnemyMK1" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
speed = 150

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "running"
frame = 1
playing = true

[node name="Colllision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = -80.0
margin_top = -140.0
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
max_value = 5.0
value = 5.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 16 )

[node name="SoundHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="SoundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
[connection signal="area_entered" from="." to="." method="_on_EnemyMK1_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyMK1_body_entered"]
[connection signal="hitted" from="." to="." method="_on_EnemyMK1_hitted"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
